<resources>
    <string name="app_name">LIME</string>

    <string name="settings">Settings</string>
    <string name="event">Event</string>
    <string name="my_day">My day</string>
    <string name="routine">Routine</string>
    <string name="task">Task</string>

    <string name="new_event">New Event</string>

    <string name="saturday">saturday</string>
    <string name="sunday">sunday</string>
    <string name="monday">monday</string>
    <string name="tuesday">tuesday</string>
    <string name="wednesday">wednesday</string>
    <string name="thursday">thursday</string>
    <string name="friday">friday</string>

    <string-array name="day_of_week">
        <item>saturday</item>
        <item>sunday</item>
        <item>monday</item>
        <item>tuesday</item>
        <item>wednesday</item>
        <item>thursday</item>
        <item>friday</item>
    </string-array>
</resources>